# gaussian-lsp

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DEVELOPMENT_REPORT_20260305.md  DEVELOPMENT_SUMMARY.md  DEV_SUMMARY.md  LICENSE  PLAN.md  README.md  coverage.xml  index.md  log.md  package-lock.json  package.json  pyproject.toml  setup.cfg  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml  pr-contract.yml
.maintenance/: last-run.md
docs/: DIAGNOSTIC_ENGINE_V1.md  LLM-WIKI-PLAN.md  OPENQC_ALIGNMENT.md  agent-verification-loop.md  docs.md  pr-review-workflow.md
examples/: ethane.gjf  methane.com  transition_state.gjf  water.gjf
raw/assets/: agent-verification-loop.md  diagnostic-engine-v1.md  diagnostic-schema.md  docs-overview.md  gaussian-examples.md  gaussian-github-parsers.md  gaussian-input-format.md  gaussian-keywords-reference.md  (+5 more)
tests/: conftest.py  test_100_coverage_final.py  test_100_percent.py  test_100_percent_coverage.py  test_absolute_final_coverage.py  test_basic.py  test_branch_451.py  test_coverage_final.py  test_coverage_gaps.py  test_dead_code_coverage.py  test_defensive.py  test_direct_coverage.py  test_edge_cases.py  test_exact_branches.py  test_exact_coverage.py  test_exact_lines.py  test_final_100.py  test_final_100_coverage.py  test_final_coverage.py  test_full_coverage.py  test_gjf_parser.py  test_line_478_exact.py  test_lsp_readiness.py  test_preflight.py  test_real_world_fixtures.py  test_repo_governance.py  test_rich_diagnostics_contract.py  test_server.py  test_smart_coverage.py  test_ultimate_coverage.py
(+81 files in other folders)
